photoshop contact page image, fix extra space

--- a/css/obe-systems.css
+++ b/css/obe-systems.css
@@ -24,6 +24,10 @@ span{
   height: 200px;
 }
 
+.contact_details {
+  /*margin-left: 5px;*/
+}
+
 .navbar-brand {
   font-size: 24px !important;
 }
